--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -13,25 +13,27 @@
         <!--Weather View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" userLabel="Weather View Controller" customClass="ViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="Weather View Controller" customClass="WeatherViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Tx9-Gg-MTy">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Tx9-Gg-MTy">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4iA-MM-Y4y" userLabel="Change City Button">
-                                <rect key="frame" x="330" y="55" width="64" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4iA-MM-Y4y" userLabel="Change City Button">
+                                <rect key="frame" x="317" y="52" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Jua-Qd-Qae"/>
+                                    <constraint firstAttribute="width" constant="50" id="zaT-DB-aU2"/>
+                                </constraints>
                                 <state key="normal" image="switch"/>
                                 <connections>
                                     <segue destination="dro-f4-hvG" kind="presentation" id="Rvn-mo-AZb"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qp2-2d-Mwx" userLabel="Container View">
-                                <rect key="frame" x="0.0" y="412" width="414" height="450"/>
+                                <rect key="frame" x="0.0" y="328" width="375" height="450"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2k8-hC-Sqh" userLabel="City Label">
                                         <rect key="frame" x="8" y="362" width="137" height="80"/>
@@ -43,10 +45,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="od6-dF-3Hn" userLabel="Weather Condition Image">
-                                        <rect key="frame" x="8" y="144" width="398" height="210"/>
+                                        <rect key="frame" x="8" y="144" width="359" height="210"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21°" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HBQ-m5-g1H" userLabel="Temprature Label">
-                                        <rect key="frame" x="8" y="8" width="398" height="128"/>
+                                        <rect key="frame" x="8" y="8" width="359" height="128"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" id="eWG-1D-YCD"/>
                                         </constraints>
@@ -71,9 +73,15 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Tx9-Gg-MTy" secondAttribute="bottom" id="0N9-ec-yv8"/>
+                            <constraint firstAttribute="trailing" secondItem="Tx9-Gg-MTy" secondAttribute="trailing" id="CpB-Ya-lgu"/>
                             <constraint firstItem="qp2-2d-Mwx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Hjk-EG-sGR"/>
+                            <constraint firstItem="Tx9-Gg-MTy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="NvB-Xk-4WJ"/>
                             <constraint firstItem="qp2-2d-Mwx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="UbP-l9-Bix"/>
                             <constraint firstItem="qp2-2d-Mwx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YY6-iV-bl2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4iA-MM-Y4y" secondAttribute="trailing" constant="8" id="caw-q8-4NY"/>
+                            <constraint firstItem="4iA-MM-Y4y" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="nze-pu-XSa"/>
+                            <constraint firstItem="Tx9-Gg-MTy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="o0e-Uz-63R"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -85,16 +93,16 @@
         <!--Change City View Controller-->
         <scene sceneID="oHA-4p-CKe">
             <objects>
-                <viewController id="dro-f4-hvG" userLabel="Change City View Controller" sceneMemberID="viewController">
+                <viewController id="dro-f4-hvG" userLabel="Change City View Controller" customClass="ChangeCityViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rch-Cg-Hp9" userLabel="Container View">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cityBackground" translatesAutoresizingMaskIntoConstraints="NO" id="byO-RJ-fVl">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="65w-eO-3ta" userLabel="Container View">
-                                <rect key="frame" x="0.0" y="44" width="414" height="250"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="250"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n0y-SL-U1V" userLabel="Back Button">
                                         <rect key="frame" x="8" y="8" width="32" height="32"/>
@@ -102,9 +110,12 @@
                                             <constraint firstAttribute="height" constant="32" id="yw7-ld-4ac"/>
                                         </constraints>
                                         <state key="normal" image="left"/>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="dro-f4-hvG" eventType="touchUpInside" id="qAI-yQ-k15"/>
+                                        </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter City Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wJP-Om-x8W" userLabel="City Name Text Field">
-                                        <rect key="frame" x="72" y="127" width="270" height="40"/>
+                                        <rect key="frame" x="72" y="127" width="231" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="hKi-Kl-sOo"/>
                                         </constraints>
@@ -113,7 +124,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get Weather" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZbU-1n-EVH" userLabel="Get Weather Button">
-                                        <rect key="frame" x="12" y="197" width="390" height="45"/>
+                                        <rect key="frame" x="12" y="197" width="351" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="Xwl-v4-PWV"/>
                                         </constraints>
